--- a/index.html
+++ b/index.html
@@ -5,41 +5,38 @@
   <meta name="viewport" content="width=device-width">
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Libre+Baskerville|Muli" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
-  <link rel="shortcut icon" type="image/x-icon" href="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-favicon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="heart.png">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Zoe & Alex</title>
+  <title>Reni and Alfonz</title>
 </head>
 <body>
   <header class="cover">
     <div class="hero-text-wrapper">
     <div class="hero-text">
     <div class="tagline">We're getting married!</div>
-          <h1>Zoe &amp; Alex</h1>
-          <span class="date">August 1, 2018</span>
+          <h1>Reni &amp; Alfonz</h1>
+          <span class="date">August 13, 2017</span>
     </div>
-    </div>  
-    <h3 class="headline">August 1, 2018</h3>
-
-     </div>
+    </div>   
    </header>
    <main>
     <section class="locations">
       <h2>Locations</h2>
       <div class="blurb">
         <h3>Ceremony</h3>
-        <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-ceremony.png" alt="Ceremony">
+        <img src="rings.png" alt="Ceremony">
         <div>St. Nicholas Church</div>
         <div>2 Trinity Square, Budapest</div>
       </div>
       <div class="blurb">
         <h3>Photos</h3>
-        <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-photoshoot.png" alt="Photoshoot">
+        <img src="camera.png" alt="Photoshoot">
         <div>Liberty Bastion</div>
         <div>23 Wisdom Road, Budapest</div>
       </div>
       <div class="blurb">
         <h3>Party</h3>
-        <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-party.png" alt="Party">
+        <img src="cake.png" alt="Party">
         <div>Heaven Lounge</div>
         <div>14 Fairy Street, Budapest</div>
       </div>
@@ -62,7 +59,7 @@
     <section class="gifts">
       <h2>Gifts</h2>
       <p>The greatest gift for us is to have you there.</p>
-      <img src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-gifts.png" alt="Gifts">
+      <img src="gift.png" alt="Gifts">
       <p>Please, just bring yourself and have fun with us.</p>
     </section>
      
@@ -84,7 +81,7 @@
           <p class="question">What should I wear? Do you have a dress code?</p>
           <p class="answer">Wear what's comfortable to you. If it helps <a href="#" target="_blank">smart casual</a> / <a href="#" target="_blank">business casual</a> for the ladies and <a href="#" target="_blank">smart casual</a> / <a href="#" target="_blank">informal</a> for the gentlemen are perfect options.</p>
           <p class="question">I would like some kind of special food (gluten-free, lactose-free, vegan etc.)</p>
-        <p class="answer">Drop us a line <a href="mailto:zoeandalex@awesomemail.com">here</a> and we'll find a way.</p>
+        <p class="answer">Drop us a line <a href="mailto:reniandalfonz@ourwedding.com">here</a> and we'll find a way.</p>
       </div>
       <div class="question-group">
         <h3>Other small stuff</h3>
@@ -100,13 +97,13 @@
     <section class="contact">
       <h2>Contact</h2>
       <p>If you have any questions feel free to call / write us.</p>
-      <p>Phone: <a href="tel:+36300000000">+36 30 000 0000</a> (Zoe) / <a href="tel:+36300000000">+36 30 000 0000</a> (Alex)</p>
-      <p>Email: <a href="mailto:zoeandalex@awesomemail.com">zoeandalex@awesomemail.com</a></p>
+      <p>Phone: <a href="tel:+36300000000">+36 30 000 0000</a> (Reni) / <a href="tel:+36300000000">+36 30 000 0000</a> (Alfonz)</p>
+      <p>Email: <a href="mailto:zoeandalex@awesomemail.com">reniandalfonz@ourwedding.com</a></p>
     </section>
   </main> 
   <footer>
     <div class="footer-wrapper">
-       <p><small>Made with heart in Budapest ©2018 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small></p>
+       <p><small>Made with heart in Budapest ©2017 | Icons by <a href="http://www.flaticon.com/authors/becris" title="Becris">Becris</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>)</small></p>
       
     </div>
   </footer>
